--- a/code/site/src/pages/home/home.html
+++ b/code/site/src/pages/home/home.html
@@ -153,7 +153,7 @@
             <!-- top search form -->
             <div class="top-search">
                 <select>
-                    <option value="flm">Film</option>
+                    <option value="film">Film</option>
                     <option value="serie">Serie</option>
                     <option value="celebrita">Celebrità</option>
                 </select>
