--- a/code/site/src/pages/seriessingle/seriessingle.html
+++ b/code/site/src/pages/seriessingle/seriessingle.html
@@ -152,6 +152,7 @@
 			<!-- top search form -->
 			<div class="top-search">
 				<select>
+					<option value="all">Tutti</option>
 					<option value="film">Film</option>
 					<option value="serie">Serie</option>
 					<option value="celebrita">Celebrità</option>
